<resources>

    <!--Drawer-->
    <string name="action_dashboard_navigation">Dashboard</string>
    <string name="action_preference_navigation">Settings</string>
    <string name="action_about_app_navigation">About This App</string>
    <string name="action_time_table_navigation">Time Table</string>
    <string name="action_share_app_navigation">Share This App</string>
    <string name="action_log_out_navigation">Log Out</string>

    <!--Settings-->
    <string name="pref_time_key_set_reminder">setReminder</string>
    <string name="pref_switch_key_reminder">isReminderEnabled</string>
    <string name="pref_time_pref_reminder_set_title">Reminder Time</string>
    <string name="pref_time_pref_reminder_set_default">00</string>
    <string name="pref_switch_reminder_summery_off">Reminder Disabled</string>
    <string name="pref_switch_reminder_summery_on">Reminder Enabled</string>
    <string name="pref_switch_reminder_title">Notification Reminder</string>

    <string name="pref_switch_key_dark_theme">isDarkThemeEnabled</string>
    <string name="pref_switch_dark_theme_summery_on">Dark Theme Enabled</string>
    <string name="pref_switch_dark_theme_summery_off">Dark Theme Disabled</string>
    <string name="pref_switch_dark_theme_title">Dark Theme</string>


    <!--FirstRunActivity-->
    <string name="btn_first_run_continue">Continue To App</string>
    <string name="btn_first_run_login">Back to Login</string>
    <string name="tv_first_run_select_your_term">Select Your Term</string>
    <string name="tv_first_run_select_starting_date">Select Starting Date</string>
    <string name="tv_first_run_starting_date">Starting Date</string>
    <string name="tv_first_ruun_ending_date">Ending Date</string>
    <string name="tv_first_run_select_ending_date">Select Ending Date</string>
    <string name="tv_first_run_please_select">Please Select\nFrom Above\nButton</string>
    <string name="java_first_run_progress_timetable">Fetching Timetable from Internet…</string>
    <string name="java_first_run_progress_holiday">Fetching Holidays from Internet…</string>
    <string name="tv_first_run_info_extra">*Attendance will be initialized for dates between starting date and ending date\n*Attendance will not be initialized for holidays and saturday and sunday</string>

    <!--LoginActivity-->
    <string name="login_log_in">Log In</string>
    <string name="tv_login_info">Hello There! \nPlease Log in with either Email or Google Account to use this application
        \n\n\n*We only need email or gmail to know who is acessing our firbase database nothing more!</string>

    <!--OverallDetailActivity-->
    <string name="tv_overall_detail_subname">Subject Name</string>
    <string name="tv_overall_text_days_present">Days Present</string>
    <string name="tv_overall_detail_text_days_present_percentage">Days Present Percentage</string>
    <string name="tv_overall_text_days_bunked">Days Bunked</string>
    <string name="tv_overall_text_total_days">Total Days</string>
    <string name="tv_overall_text_days_available_to_bunk">Days Available to Bunk</string>
    <string name="tv_overall_text_attendance_as_on">Attendance as on</string>
    <string name="tv_overall_text_days_elapsed">Days Elapsed</string>

    <!--OverallFragment-->
    <string name="tv_item_holder_overall_percent">50 %</string>
    <string name="tv_item_holder_overall_subject_name">SubjectName</string>

    <!--IndividualAttendanceFragment-->
    <!--rv-->
    <string name="tv_item_holder_dashboard_attendance_subject_name">Subject Name</string>
    <string name="tv_item_holder_dashboard_attendance_faculty_name">Faculty Name</string>
    <string name="tv_item_holder_holiday_no">01.</string>

    <string name="frag_individual_attendance_holiday_image">HolidayImage</string>
    <string name="frag_individual_attendance_holiday_text">Woohoo !!\nEnjoy It looks like you have Holiday Today!</string>

    <!--HolidayFragment-->
    <string name="tv_item_holder_holiday_holiday_name">Holiday</string>

    <!--Widget-->
    <string name="widget_list_sub_name">Maths</string>
    <string name="widget_mark_attedance">Mark Attedance</string>

    <!--Timetable-->
    <string name="tv_tiime_table_holder_cell">Cell</string>
    <string name="tv_tiime_table_holder_column">Column</string>
    <string name="tv_tiime_table_holder_row">Row</string>

    <!--Bottom Navigation menus-->
    <string name="menu_bottom_today">Today</string>
    <string name="menu_bottom_overall">Overall</string>
    <string name="menu_bottom_timetable">Timetable</string>
    <string name="menu_bottom_holidays">Holidays</string>

    <!--Splash-->
    <string name="tv_splash_grettings">Welcome to \n Student Companion</string>

    <!--About Us-->
    <string name="tv_about_tag_developer">Developer :</string>
    <string name="developer_name">Pranav Vyas</string>
    <string name="capstone_notice">A Project made as Capstone Project in Udacity\'s Android Developer Nanodegree powered by Google Reskilling India Scholarship</string>
    <string name="tv_about_features">Features</string>
    <string name="tv_about_text_features">* An app designed for helping out students in life! \n* With this app one can keep their attendance tracked, If collage have attendance threshold (Which most of the collages now a days have) ,than can monitor the attendance percent directly from the Overall attendance Page!\n* By Clicking on specific Subject shows the information about that subject like how many have you attended and most important How Many Lectures Can Be Bunked from now on! \n* A helper widget allows you to keep in mind what lectures are there today!\n* With the Smart card It is even easier to monitor Your attendance as smart card will show necessary data (like attend next x lectues to get over threshold) ! \n* Apart from the attendance This app also have some handy functionality like TimeTable and Holidays,\n* With the Notification reminders it is one less thing to remember to put attendance of today!</string>
    <string name="desc_image_about_logo">AppLogo</string>

    <!--Reminder Notification-->
    <string name="java_reminder_notification_msg">Hi There! If you have not yet completed the attendance yet ,Better do it now!</string>
    <string name="java_reminder_notification_title">Add Attendance Now</string>
    <string name="java_add_overall_attendance_service_error_service">Error occurred updating overall database</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_tutorial_welcome_1">Welcome to Student Compainion!</string>
    <string name="tv_tutorial_welcome_2">This is turotial that will be shown only once! swipe right for next , left for previous step</string>
    <string name="tv_main_tut_info_1">At any time when you want to see more option click on this hamburger icon (Three verticle lines in the left corner of top part)</string>
    <string name="tv_main_tut_info_2">Here you can see all the options like to timetable, dashboard, settings etc.</string>
    <string name="tv_dashboard_tut_info_2">* Here you can see useful information like how much days are left for you to bunk in that perticular subject and also how much days are left total in the current term</string>
    <string name="tv_dashboard_tut_info_1">* This is Smart card, the card will show warning only when the your attendance is dangerously close to threshold (For now the close is when you have 5 more days available to bunk in lectures!)</string>
    <string name="tv_dashboad_tut_title">Dashboard</string>
    <string name="continue_btn">Continue</string>
    <string name="tv_dashboard_frag_present_or_not">Present or Not</string>
    <string name="tv_dashboard_frag_lecture_detail">Lecture Detail</string>
    <string name="tv_dashboard_frag_lecture_no">Lecture No</string>
    <string name="tv_dashboard_frag_today_attendance">Today\'s Attendance</string>
    <string name="tv_overall_frag_info_chart">Overall Attendance Subject Wise (Touch on the card to view more detials)</string>
    <string name="tv_overall_frag_info_calender">Touch on the calender date to see attendace of that date</string>
    <string name="java_error_sign_out">Error Occurred while Signing Out Try Again</string>
    <string name="java_success_sign_out">Successfully Signed Out</string>
    <string name="java_error_date_not_selected_first_run">Please Select all two dates</string>
    <string name="java_error_dates_are_same_first_run">Both the dates can not be equal</string>
    <string name="java_error_diffe_in_dates_first_run">Difference between dates can not be less than 15 days and more than 1.5 years</string>
    <string name="java_error_no_connection_first_run">Internet Connection is not available You need Internet Connection for fetching data from servers!</string>
    <string name="java_timetable_success_first_run">Time Table Received</string>
    <string name="java_holiday_success_first_run">Holiday Received</string>
    <string name="java_attendance_success_first_run">Attendance Initialized</string>
    <string name="java_connection_success_first_run">Connected</string>
    <string name="java_conetion_failure_first_run">Not Connected</string>
    <string name="java_widget_create">Widget Created Now</string>
    <string name="java_dashboard_sign_out_success">Successfully Signed Out</string>
    <string name="java_dashboard_sign_out_failure">Error Occurred while Signing Out Try Again</string>
    <string name="java_progress_holiday_first_run">Initilazing Attendance Database Now… This might take a minute or less…</string>
    <string name="java_widget_error_tv">Error Occurred</string>
    <string name="java_widget_error">Error Occurred</string>
    <string name="java_login_sign_in_cancelled">Sign In Cancelled</string>
    <string name="java_login_no_connection">No Internet Connection</string>
    <string name="java_login_default_error">Unknown Error Occurred</string>
    <string name="java_overall_attendance_job_notification">Overall Attendance Added for</string>
    <string name="java_daily_reminder_job_notification_open_app">Open App</string>
    <string name="java_navigation_share_app">Hey ! I am  using this app to track my attendance, You can also get it for free from this link</string>
    <string name="java_navigation_share_app_2">Checkout this awesome attendance app</string>
    <string name="java_navigation_share_app_intent_chooser">Share Using…</string>
    <string name="java_navigation_share_app_url"><![CDATA[<url-will-come-here>]]></string>
    <string name="java_firstrun_title">Registration</string>
    <string name="java_individual_title">Attendance for</string>
    <string name="java_smart_card_safe">* You are safe in Subject :</string>
    <string name="java_smart_card_dangerous_1">* You Only have</string>
    <string name="java_smart_card_dangerous_2">days to bunk in Subject : </string>
    <string name="java_smart_card_dangerous_3">, Attend at least </string>
    <string name="java_smart_card_dangerous_5">days to get Attendance greater than 75 </string>
    <string name="java_smart_card_dangerous_4">days out of </string>
    <string name="java_smart_card_critical">* You Should attend All the coming lectures in Subject :</string>
    <string name="java_smart_card_not_safe">* You have less than needed attendance in  Subject</string>
    <string name="java_toturial_title">Tutorial</string>
    <string name="drawer_default_uname">ANONYMOUS</string>
    <string name="drawer_default_email">PLEASE REGISTER</string>
    <string name="java_timetable_column_title_lecture">Lecture</string>
    <string name="java_timetable_column_title_faculty">Faculty Name</string>

</resources>