<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstRun.FirstRunActivity">

    <TextView
        android:id="@+id/tv_first_run_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_first_run"
        tools:text="Hello There!" />

    <Button
        android:id="@+id/btn_first_run_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btn_first_run_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_first_run_continue"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_first_run_continue"
        android:layout_width="0dp"
        android:background="@drawable/button_rounded"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="true"
        android:text="@string/btn_first_run_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_first_run_login" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_first_run_select_your_term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_run_greeting" />

    <ProgressBar
        android:id="@+id/progress_first_run_term"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_run_start_date" />

    <TextView
        android:id="@+id/tv_first_run_progress_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Progress"
        app:layout_constraintEnd_toEndOf="@+id/progress_first_run_term"
        app:layout_constraintStart_toStartOf="@+id/progress_first_run_term"
        app:layout_constraintTop_toBottomOf="@+id/progress_first_run_term" />

    <Button
        android:id="@+id/btn_first_run_open_start_date"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/tv_first_run_select_starting_date"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_first_run_tag_start_date"
        app:layout_constraintStart_toStartOf="@+id/tv_first_run_tag_start_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_run_tag_start_date" />

    <TextView
        android:id="@+id/tv_first_run_tag_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_first_run_starting_date"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_first_ruun_ending_date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_first_run_tag_start_date"
        app:layout_constraintTop_toTopOf="@+id/tv_first_run_tag_start_date" />

    <Button
        android:id="@+id/btn_first_run_open_end_date"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rounded"
        android:paddingStart="2dp"
        android:paddingBottom="2dp"
        android:text="@string/tv_first_run_select_ending_date"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/tv_first_run_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_first_run_please_select"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_first_run_open_start_date"
        app:layout_constraintStart_toStartOf="@+id/btn_first_run_open_start_date"
        app:layout_constraintTop_toBottomOf="@+id/btn_first_run_open_start_date"
        tools:text="@tools:sample/date/ddmmyy" />

    <TextView
        android:id="@+id/tv_first_run_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_first_run_please_select"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_first_run_open_end_date"
        app:layout_constraintStart_toStartOf="@+id/btn_first_run_open_end_date"
        app:layout_constraintTop_toBottomOf="@+id/btn_first_run_open_end_date"
        tools:text="@tools:sample/date/ddmmyy" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_first_run"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_first_run_info_extra"
        app:layout_constraintBottom_toTopOf="@+id/btn_first_run_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>